fix: Sidebar, multiselect, body tag letterspacing
* fixed space between multiselect pills
* fixed sidebar spacing and alignment
* added letterspacing of 0.02em in the body tag as this is the new base spacing.

--- a/frappe/public/scss/common/controls.scss
+++ b/frappe/public/scss/common/controls.scss
@@ -62,6 +62,7 @@ select.form-control {
 	height: auto !important;
 	padding: 10px;
 	padding-bottom: 5px;
+	gap: 6px;
 	.link-field {
 		width: 100%;
 	}
